# dotfiles

./: .envrc  .gitignore  AGENTS.md  CANON.md  CLAUDE.md  CONTEXT.md  ENGINEERING.md  ML_SETUP.md  README.md  TODO.md  baselines.json  install.sh  justfile  lefthook.yml
.agents/: generate-permissions.sh  (+1 more)
cli/: .vulture_whitelist.py  README.md  pyproject.toml  snapshot_report.html
cli/src/dotfiles/: __init__.py  agent.py  banner.py  conftest.py  console.py  fsutil.py  logging.py  result.py  settings.py  test_agent.py  test_banner.py  test_console.py  test_logging.py  test_logging_observability.py  test_ui.py  vendor.py
cli/src/dotfiles/adapters/: clock.py  filesystem.py  http.py  launcher.py  ports.py  process.py  test_http_adapter.py  test_launcher_adapter.py  test_ports_runtime.py  test_process_adapter.py
cli/src/dotfiles/app/: context.py  fuzzy.py  main.py  test_cli_skeleton.py  test_command_tree.py  test_context.py  test_context_state_dir.py  test_fuzzy.py  test_smoke.py
cli/src/dotfiles/cli/: agent.py  brew.py  context.py  doctor.py  fleet.py  ledger.py  llm.py  main.py  remote.py  scaffold.py  session.py  snapshot.py  ui.py  verify.py
cli/src/dotfiles/cmd/agent/: capability_matrix.py  catechism.py  cli.py  config.py  deny_commands.py  detail.py  fleet.py  health.py  instructions.py  lang_packs.py  lib.py  local.py  models.py  overview.py  settings_merger.py  setup.py  skill_census.py  skill_collision.py  skill_health.py  skill_inventory.py  skill_prune.py  skill_stats.py  skills.py  test_agent_local.py  test_agent_overview_core.py  test_agent_setup_claude.py  test_agent_setup_codex.py  test_agent_setup_cursor.py  test_agent_setup_gemini.py  test_agent_setup_hermes.py  test_agent_setup_lib.py  test_agent_setup_orchestrator.py  test_agent_setup_pi.py  test_agent_setup_settings_toml.py  test_capability_matrix.py  test_catechism_core.py  test_cli_agent.py  test_cli_agent_setup.py  test_deny_commands_sync.py  test_detail.py  (+19 more)
cli/src/dotfiles/cmd/agent/render/: __init__.py  detail.py  health.py  instructions.py  overview.py  skills.py  stats.py
cli/src/dotfiles/cmd/agent/vendors/: claude.py  codex.py  cursor.py  gemini.py  hermes.py  pi.py
cli/src/dotfiles/cmd/benchmark/: cli.py  models.py  service.py  test_cli_llm.py  test_llm_core.py
cli/src/dotfiles/cmd/brew/: cli.py  service.py  test_brew_core.py  test_brew_install.py  test_cli_brew.py
cli/src/dotfiles/cmd/doctor/: cli.py  models.py  service.py  test_cli_doctor.py  test_doctor_core.py
cli/src/dotfiles/cmd/email/: __init__.py  cli.py  icloud.py  service.py  test_cli_email.py  test_email_core.py
cli/src/dotfiles/cmd/remote/: cli.py  models.py  pane.py  service.py  test_cli_remote.py  test_remote_models.py  test_remote_service.py  test_tui_remote.py
cli/src/dotfiles/cmd/repo/: cli.py  models.py  service.py  test_repo_core.py
cli/src/dotfiles/cmd/session/: agent_sessions.py  cli.py  models.py  pane.py  service.py  session_info.py  session_name.py  test_agent_sessions.py  test_cli_session.py  test_session_info.py  test_session_name.py  test_sessions_core.py  test_tui_sessions.py  test_zellij.py  zellij.py
cli/src/dotfiles/cmd/session/__snapshots__/test_tui_sessions/: test_action_sheet_snapshot.raw
cli/src/dotfiles/cmd/snapshot/: cli.py  models.py  service.py  test_snapshot_cli.py  test_snapshot_core.py
cli/src/dotfiles/core/: agent_config.py  agent_overview.py  agent_sessions.py  brew.py  doctor.py  fleet.py  fsutil.py  gemini.py  ledger.py  llm.py  logging.py  models.py  ports.py  remote.py  sessions.py  settings.py  skill_health.py  skills.py  snapshot.py  verify.py
cli/src/dotfiles/core/agent_setup/: __init__.py  bake_rules.py  claude.py  codex.py  cursor.py  gemini.py  lib.py  pi.py
cli/src/dotfiles/core/scaffold/: __init__.py  agents_md.py  artifacts.py  gitignore.py  optional_scaffolds.py  preflight.py  project_rename.py  recipes.py  rules.py  service.py  symlinks.py  templates.py  tool_registry.py
cli/src/dotfiles/testing/: fakes.py  llm_payloads.py
cli/src/dotfiles/tui/: __init__.py  app.py  launcher.py  test_tui_app.py
cli/src/dotfiles/tui/__snapshots__/test_tui_app/: test_dashboard_snapshot.raw
cli/src/dotfiles/tui/panes/: __init__.py  remote.py  sessions.py
cli/src/dotfiles/tui/styles/: dashboard.tcss
cli/src/dotfiles_cli/: console.py
cli/src/dotfiles_cli/adapters/: clock.py  filesystem.py  http.py  launcher.py  process.py
cli/src/dotfiles_cli/cli/: context.py  doctor.py  llm.py  main.py  remote.py  session.py  ui.py  verify.py
cli/src/dotfiles_cli/core/: agent_overview.py  doctor.py  llm.py  logging.py  models.py  ports.py  remote.py  sessions.py  settings.py  skills.py  verify.py
cli/tests/: conftest.py  fakes.py  test_agent_config.py  test_agent_overview_core.py  test_agent_sessions.py  test_agent_setup_bake_rules.py  test_agent_setup_claude.py  test_agent_setup_codex.py  test_agent_setup_cursor.py  test_agent_setup_gemini.py  test_agent_setup_lib.py  test_agent_setup_pi.py  test_agent_setup_settings_toml.py  test_banner.py  test_brew_core.py  test_brew_install.py  test_cli_agent.py  test_cli_agent_setup.py  test_cli_brew.py  test_cli_doctor.py  test_cli_llm.py  test_cli_remote.py  test_cli_scaffold.py  test_cli_session.py  test_cli_skeleton.py  test_cli_verify.py  test_command_tree.py  test_console.py  test_context.py  test_context_state_dir.py  test_doctor_core.py  test_fleet_cli.py  test_fleet_core.py  test_fs_clock_adapters.py  test_gemini_core.py  test_http_adapter.py  test_launcher_adapter.py  test_ledger_cli.py  test_ledger_core.py  test_ledger_hook_schema.py  (+27 more)
cli/tests/__snapshots__/test_tui_app/: test_dashboard_snapshot.raw
prompts/python/cli/templates/: justfile  lefthook.yml  pyproject.toml
prompts/python/templates/: .env.example  .gitignore  justfile  lefthook.yml  pyproject.toml
prompts/rust/templates/: .env.example  .gitignore  Cargo.toml  justfile  lefthook.yml
tools/yt-ingest/: README.md  pyproject.toml
tools/yt-ingest/yt_ingest/: __init__.py  __main__.py  bookmarks.py  cli.py  pipeline.py  transcript.py  triage.py  writer.py
(+472 files in other folders)
