[project]
name = "dotfiles-cli"
version = "0.1.0"
description = "Hexagonal Typer CLI + TUI for the dotfiles dev environment"
requires-python = ">=3.13"
dependencies = [
    "typer>=0.15",
    "rich>=13.9",
    "pydantic>=2.10",
    "pydantic-settings>=2.7",
    "structlog>=24.4",
]

[project.scripts]
dotfiles = "dotfiles_cli.cli.main:app"

[dependency-groups]
dev = [
    "pytest>=8.3",
    "pytest-cov>=6.0",
    "pytest-timeout>=2.3",
    "ruff>=0.9",
    "pyright>=1.1.390",
    "vulture>=2.14",
    "complexipy>=2.0",
    "pip-audit>=2.7",
    "hypothesis>=6.122",
    "dirty-equals>=0.8",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/dotfiles_cli"]

[tool.ruff]
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "N", "UP", "B", "A", "C4", "SIM", "RUF", "PTH", "TID", "PT"]

[tool.pyright]
include = ["src", "tests"]
strict = ["src"]
pythonVersion = "3.13"
venvPath = "."
venv = ".venv"

[tool.pytest.ini_options]
addopts = "--timeout=30 --strict-markers"
testpaths = ["tests"]

[tool.coverage.run]
source = ["dotfiles_cli"]
branch = true
