[project]
name = "yt-ingest"
version = "0.1.0"
description = "Ingest YouTube bookmarks into an Obsidian Learn/ queue with Gemini + oEmbed verification"
requires-python = ">=3.11"
dependencies = [
    "typer>=0.12",
    "rich>=13",
    "yt-dlp>=2024.10",
]

[project.scripts]
yt-ingest = "yt_ingest.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["yt_ingest"]
