# =============================================================================
# Python Project Configuration
# =============================================================================
# Managed with UV (https://docs.astral.sh/uv/)
# =============================================================================

[project]
name = "my-python-app"
version = "0.1.0"
description = "My Python application"
readme = "README.md"
requires-python = ">=3.14"
license = { text = "MIT" }
authors = [{ name = "Your Name", email = "you@example.com" }]

dependencies = [
    # Web Framework
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",

    # Validation
    "pydantic>=2.10.0",
    "pydantic-settings>=2.6.0",

    # Database
    "sqlalchemy>=2.0.36",
    "asyncpg>=0.30.0",
    "alembic>=1.14.0",

    # HTTP Client
    "httpx>=0.28.0",

    # Utilities
    "python-dotenv>=1.0.0",
]

[project.optional-dependencies]
dev = [
    # Testing
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=6.0.0",
    "pytest-mock>=3.14.0",
    "respx>=0.22.0",
    "aiosqlite>=0.20.0",

    # Linting & Formatting
    "ruff>=0.8.0",
    "ty>=0.1.0",

    # Git Hooks
    "lefthook>=0.1.0",
]

ml = [
    # Data Processing
    "polars>=1.17.0",
    "numpy>=2.2.0",

    # ML Frameworks
    "torch>=2.5.0",

    # Experiment Tracking
    "wandb>=0.19.0",
]

[project.scripts]
app = "app.main:main"

# =============================================================================
# Dependency Groups (PEP 735)
# =============================================================================

[dependency-groups]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=6.0.0",
    "pytest-mock>=3.14.0",
    "respx>=0.22.0",
    "aiosqlite>=0.20.0",
    "ruff>=0.8.0",
    "ty>=0.1.0",
]

# =============================================================================
# Ruff Configuration
# =============================================================================
# Note: Ruff supports up to py313. Use py313 until Ruff adds Python 3.14 support.
# =============================================================================

[tool.ruff]
target-version = "py313"
line-length = 100
indent-width = 4

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # Pyflakes
    "I",      # isort
    "B",      # flake8-bugbear
    "C4",     # flake8-comprehensions
    "UP",     # pyupgrade
    "ARG",    # flake8-unused-arguments
    "SIM",    # flake8-simplify
    "TCH",    # flake8-type-checking
    "PTH",    # flake8-use-pathlib
    "ERA",    # eradicate (commented-out code)
    "RUF",    # Ruff-specific rules
    "ASYNC",  # flake8-async
]
ignore = [
    "E501",   # Line too long (handled by formatter)
    "B008",   # Do not perform function calls in argument defaults (FastAPI Depends)
    "B904",   # Allow raise without from in except
]

[tool.ruff.lint.isort]
known-first-party = ["app"]
force-single-line = false
lines-after-imports = 2

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = [
    "ARG",    # Unused arguments in tests (fixtures)
    "S101",   # Use of assert
]
"alembic/**/*.py" = [
    "ERA001", # Commented-out code in migrations is OK
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

# =============================================================================
# ty Configuration (Astral type checker)
# =============================================================================

[tool.ty]
python-version = "3.14"

[tool.ty.src]
include = ["src"]
exclude = [
    "**/__pycache__",
    ".venv",
    "alembic",
]

# =============================================================================
# Pytest Configuration
# =============================================================================

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
addopts = [
    "-ra",
    "-q",
    "--strict-markers",
    "--strict-config",
]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests",
]

# =============================================================================
# Coverage Configuration
# =============================================================================

[tool.coverage.run]
source = ["src"]
branch = true
omit = [
    "*/tests/*",
    "*/__pycache__/*",
    "*/migrations/*",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise NotImplementedError",
    "if TYPE_CHECKING:",
    "if __name__ == .__main__.:",
]
fail_under = 80
show_missing = true
